# Solaris-Engine

./: CMakeLists.txt  LICENSE  README.md
include/: camera.hpp  shader.hpp
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp
